assert-struct/tests/snapshots/tuples__result_tuple_multiple_errors.snap
---
source: assert-struct/tests/tuples.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/tuples_errors/result_multiple_errors.rs:21:23
   |
21 |             data: Ok((100, "different")), // Both fields in Ok variant wrong
   |                       ^^^  ^^^^^^^^^^^ got "success"
   |                       |
   |                       got 42
